# adele-azure-runner

./: .env  .env.local  .gitignore  PROJECT_BRIEF.md  PROMPT_AGENT.md  README.md  TODO.md  config.example.yaml  config.yaml  config2.yaml  pyproject.toml
docs/: architecture.md  batch-mode.md  cli-reference.md  configuration.md  development.md  judging.md  output-artifacts.md  resume-and-idempotency.md
examples/: config.batch-mode.yaml  config.foundry-only.yaml  config.multi-judge.yaml  run-multi-model.sh  run-subset.sh
src/adele_azure_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adele_runner/: __init__.py  cli.py  config.py  models.py  schemas.py
src/adele_runner/adapters/: __init__.py  azure_openai.py  azure_openai_batch.py  factory.py  foundry.py  foundry_inference.py  google_genai.py
src/adele_runner/adapters/providers/: __init__.py
src/adele_runner/adapters/providers/anthropic/: __init__.py  batch.py  request_response.py
src/adele_runner/adapters/providers/azure_ai_inference/: __init__.py  request_response.py
src/adele_runner/adapters/providers/azure_openai/: __init__.py  batch.py  request_response.py
src/adele_runner/datasets/: adele.py
src/adele_runner/pipeline/: inference_runner.py  judge_runner.py  manifest.py  merge.py  metrics.py
src/adele_runner/runtime/: __init__.py  batch_jobs.py  budgeting.py  executors.py  provider_limits.py  registry.py  resolution.py  types.py
src/adele_runner/stages/: __init__.py  inference.py  judging.py
src/adele_runner/utils/: batch_split.py  concurrency.py  io.py  pricing.py  retry.py
tests/: test_anthropic_batch.py  test_batch_jobs.py  test_batch_split.py  test_budget_runtime.py  test_cli_overrides.py  test_config_validation.py  test_dotenv_loading.py  test_dry_run.py  test_dry_run_pipeline.py  test_executors.py  test_failure_persistence.py  test_force_run.py  test_inference_runner_google.py  test_inference_stage.py  test_inter_rater.py  test_judge_runner_resume.py  test_judge_v2.py  test_judging_stage.py  test_merge_none_propagation.py  test_mode_resolution.py  test_parsing.py  test_pick_col.py  test_pricing.py  test_provider_limits.py  test_rate_limit_compute.py  test_rate_limiter.py  test_resolution.py  test_resume_dedup.py  test_retry_filter.py  test_run_manifest.py  test_schema_validation.py  test_verification_score.py
(+3 files in other folders)
