[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adele-azure-runner"
version = "0.1.0"
description = "Run ADeLe benchmark against Azure AI Foundry models with multi-judge evaluation"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.17.0",
    "datasets>=2.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyarrow>=16.0.0",
    "pandas>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "anyio>=4.4.0",
    "tqdm>=4.66.0",
]

[project.scripts]
adele-runner = "adele_runner.cli:app"

[project.optional-dependencies]
batch = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adele_runner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["adele_runner"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
